--- a/app/src/main/res/layout/game_list_item.xml
+++ b/app/src/main/res/layout/game_list_item.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#82ff8d">
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_margin="4dp"/>
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,8 +22,9 @@
             android:layout_height="wrap_content"/>
 
         <TextView android:id="@+id/text2"
-            android:textSize="14sp"
+            android:textSize="10sp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:typeface="monospace" />
     </LinearLayout>
 </LinearLayout>
